Fixed FF wrapping the tabs

--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -246,6 +246,7 @@ nav#dimension
 				padding: 0
 				padding-bottom: 0
 				text-align: right
+				white-space: nowrap
 			.tab
 				position: relative
 				display: inline-block
